--- a/Beacon/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Beacon/Base.lproj/Main.storyboard
@@ -273,19 +273,18 @@
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="RRE-kK-9Qc">
-                                            <rect key="frame" x="22" y="358" width="16" height="15"/>
+                                            <rect key="frame" x="22" y="355" width="18" height="18"/>
                                             <accessibility key="accessibilityConfiguration">
                                                 <accessibilityTraits key="traits" button="YES" notEnabled="YES"/>
                                                 <bool key="isElement" value="NO"/>
                                             </accessibility>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="15" id="vjY-dp-Tb0"/>
-                                                <constraint firstAttribute="width" constant="16" id="wBC-L4-Jrv"/>
+                                                <constraint firstAttribute="width" secondItem="RRE-kK-9Qc" secondAttribute="height" multiplier="1:1" id="a4O-ho-95l"/>
                                             </constraints>
                                             <state key="normal" image="watch"/>
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1606" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="roi-yx-hdi">
-                                            <rect key="frame" x="44" y="355" width="34" height="18"/>
+                                            <rect key="frame" x="46" y="355" width="34" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="oqZ-kS-LJq"/>
                                             </constraints>
@@ -348,15 +347,16 @@
                                     <constraints>
                                         <constraint firstItem="uRX-RK-YId" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" id="1W7-CR-j7X"/>
                                         <constraint firstItem="yod-Xw-sDo" firstAttribute="top" secondItem="JMB-Uh-Dd0" secondAttribute="bottom" constant="14" id="1zt-NS-EZl"/>
+                                        <constraint firstItem="RRE-kK-9Qc" firstAttribute="centerY" secondItem="roi-yx-hdi" secondAttribute="centerY" id="2Ps-kc-jJF"/>
                                         <constraint firstItem="Oqr-L3-O1z" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" constant="13" id="3UR-N7-UuJ"/>
                                         <constraint firstAttribute="trailing" secondItem="uRX-RK-YId" secondAttribute="trailing" id="7Ih-Az-7lA"/>
+                                        <constraint firstItem="RRE-kK-9Qc" firstAttribute="height" secondItem="roi-yx-hdi" secondAttribute="height" id="8TF-lp-wwG"/>
                                         <constraint firstAttribute="trailing" secondItem="0xd-lF-nR7" secondAttribute="trailing" id="8Zu-nZ-Dcb"/>
                                         <constraint firstItem="TfA-E0-i30" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" id="9Ez-W9-rka"/>
                                         <constraint firstAttribute="trailing" secondItem="ZXV-eD-0BO" secondAttribute="trailing" id="9NO-My-vec"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="8SJ-sU-Lu6" secondAttribute="trailing" constant="14" id="Dgy-Z1-cwT"/>
                                         <constraint firstItem="84x-OZ-c7a" firstAttribute="leading" secondItem="Oqr-L3-O1z" secondAttribute="trailing" constant="10" id="JT0-u8-ETJ"/>
                                         <constraint firstItem="JMB-Uh-Dd0" firstAttribute="centerX" secondItem="yod-Xw-sDo" secondAttribute="centerX" id="Nfa-VE-2s6"/>
-                                        <constraint firstItem="RRE-kK-9Qc" firstAttribute="top" secondItem="gE7-o8-sM0" secondAttribute="bottom" constant="14" id="Ph6-03-DKe"/>
                                         <constraint firstAttribute="trailing" secondItem="TfA-E0-i30" secondAttribute="trailing" id="Q26-xo-4ku"/>
                                         <constraint firstItem="mDo-Vl-Foh" firstAttribute="top" secondItem="Oqr-L3-O1z" secondAttribute="top" constant="8" id="Qa8-bJ-K3N"/>
                                         <constraint firstItem="84x-OZ-c7a" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" constant="18" id="RfJ-Og-v4o"/>
@@ -399,9 +399,9 @@
                                     <outlet property="playButton" destination="gIm-IB-qpB" id="f9Z-5t-CGp"/>
                                     <outlet property="playerScreen" destination="ZXV-eD-0BO" id="cSe-Eu-0zZ"/>
                                     <outlet property="remenuButton" destination="To6-MU-QqW" id="my6-KD-d9Z"/>
-                                    <outlet property="resourceLikeLabel" destination="roi-yx-hdi" id="RoQ-8n-H9u"/>
                                     <outlet property="resourceTitleLabel" destination="8SJ-sU-Lu6" id="PgK-6m-Shr"/>
                                     <outlet property="resourceTypeCollectionView" destination="gE7-o8-sM0" id="MXd-P9-h3u"/>
+                                    <outlet property="resourceWatchTimeLabel" destination="roi-yx-hdi" id="ele-5M-AmG"/>
                                     <outlet property="timeLabel" destination="mDo-Vl-Foh" id="QV7-k7-K4D"/>
                                 </connections>
                             </tableViewCell>
@@ -487,13 +487,13 @@
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Star War The Third Gathers: Backstroke of the West HD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dy-Df-I7U">
-                                            <rect key="frame" x="132" y="17" width="218" height="45"/>
+                                            <rect key="frame" x="132" y="17" width="218" height="28"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bwn-2E-79Z">
-                                            <rect key="frame" x="131" y="70" width="217" height="21"/>
+                                            <rect key="frame" x="131" y="53" width="217" height="21"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="K6H-gR-TVf"/>
@@ -531,22 +531,43 @@
                                                 </collectionViewCell>
                                             </cells>
                                         </collectionView>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="watch" translatesAutoresizingMaskIntoConstraints="NO" id="56G-K1-OTy">
+                                            <rect key="frame" x="131" y="88" width="18" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="56G-K1-OTy" secondAttribute="height" multiplier="1:1" id="fzf-Qc-DjK"/>
+                                            </constraints>
+                                        </imageView>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1606" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UPN-H4-w3G">
+                                            <rect key="frame" x="155" y="88" width="33.5" height="18"/>
+                                            <constraints>
+                                                <constraint firstAttribute="height" constant="18" id="rqc-YT-vXO"/>
+                                            </constraints>
+                                            <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="15"/>
+                                            <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="UPN-H4-w3G" firstAttribute="centerY" secondItem="56G-K1-OTy" secondAttribute="centerY" id="3C5-eD-tYr"/>
                                         <constraint firstItem="bwn-2E-79Z" firstAttribute="top" secondItem="0dy-Df-I7U" secondAttribute="bottom" constant="8" id="FCC-iM-yA0"/>
+                                        <constraint firstItem="UPN-H4-w3G" firstAttribute="top" secondItem="bwn-2E-79Z" secondAttribute="bottom" constant="14" id="Fw2-dO-x2x"/>
                                         <constraint firstItem="0dy-Df-I7U" firstAttribute="top" secondItem="TtP-lp-tTs" secondAttribute="top" constant="4" id="LLM-iX-I0W"/>
                                         <constraint firstAttribute="trailingMargin" secondItem="bwn-2E-79Z" secondAttribute="trailing" constant="19" id="POJ-hr-2rQ"/>
+                                        <constraint firstItem="UPN-H4-w3G" firstAttribute="bottom" secondItem="TtP-lp-tTs" secondAttribute="bottom" id="Rbz-s2-nMl"/>
                                         <constraint firstItem="TtP-lp-tTs" firstAttribute="centerY" secondItem="yhl-op-zbI" secondAttribute="centerY" id="VGN-Bx-mgf"/>
+                                        <constraint firstItem="56G-K1-OTy" firstAttribute="leading" secondItem="bwn-2E-79Z" secondAttribute="leading" id="X2D-vJ-25R"/>
                                         <constraint firstItem="TtP-lp-tTs" firstAttribute="leading" secondItem="yhl-op-zbI" secondAttribute="leading" constant="24" id="ZoE-6z-mQq"/>
+                                        <constraint firstItem="56G-K1-OTy" firstAttribute="height" secondItem="UPN-H4-w3G" secondAttribute="height" id="fOy-UE-YxI"/>
                                         <constraint firstItem="bwn-2E-79Z" firstAttribute="leading" secondItem="TtP-lp-tTs" secondAttribute="trailing" constant="14" id="jDc-1v-pjR"/>
+                                        <constraint firstItem="UPN-H4-w3G" firstAttribute="leading" secondItem="56G-K1-OTy" secondAttribute="trailing" constant="6" id="kgN-YV-BhT"/>
                                         <constraint firstAttribute="trailing" secondItem="0dy-Df-I7U" secondAttribute="trailing" constant="25" id="pYy-Bt-Cgc"/>
-                                        <constraint firstItem="bwn-2E-79Z" firstAttribute="bottom" secondItem="TtP-lp-tTs" secondAttribute="bottom" constant="-14.6" id="xKY-Lb-STv"/>
                                         <constraint firstItem="0dy-Df-I7U" firstAttribute="leading" secondItem="TtP-lp-tTs" secondAttribute="trailing" constant="15" id="znR-ME-1oC"/>
                                     </constraints>
                                 </tableViewCellContentView>
                                 <connections>
                                     <outlet property="resourceImageView" destination="TtP-lp-tTs" id="ivV-O1-7KN"/>
                                     <outlet property="resourceTypeCollectionView" destination="bwn-2E-79Z" id="R6Q-sH-ITL"/>
+                                    <outlet property="resourceWatchTimeLabel" destination="UPN-H4-w3G" id="wse-Sm-X6k"/>
                                     <outlet property="titleLabel" destination="0dy-Df-I7U" id="C8u-Wr-rLs"/>
                                 </connections>
                             </tableViewCell>
@@ -559,7 +580,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ad-58-UyQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928.79999999999995" y="121.4392803598201"/>
+            <point key="canvasLocation" x="928.79999999999995" y="120.98950524737631"/>
         </scene>
         <!--Full Screen Player-->
         <scene sceneID="nRn-UK-Scj">
