--- a/Beacon/Beacon/Base.lproj/Main.storyboard
+++ b/Beacon/Beacon/Base.lproj/Main.storyboard
@@ -172,9 +172,6 @@
                                         </button>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Ghost In The Shell" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="8SJ-sU-Lu6">
                                             <rect key="frame" x="22" y="289" width="331" height="24"/>
-                                            <constraints>
-                                                <constraint firstAttribute="height" constant="24" id="CfS-dg-GzU"/>
-                                            </constraints>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="20"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
@@ -303,9 +300,6 @@
                                                 <action selector="showMenu:" destination="brf-9Z-l1h" eventType="touchUpInside" id="Y9b-kA-cCL"/>
                                             </connections>
                                         </button>
-                                        <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="uRX-RK-YId">
-                                            <rect key="frame" x="0.0" y="211" width="375" height="2"/>
-                                        </progressView>
                                         <progressView opaque="NO" contentMode="scaleToFill" verticalHuggingPriority="750" progress="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="0xd-lF-nR7">
                                             <rect key="frame" x="0.0" y="211" width="375" height="2"/>
                                             <color key="tintColor" red="0.99215686270000003" green="0.75294117650000003" blue="0.1843137255" alpha="1" colorSpace="calibratedRGB"/>
@@ -345,11 +339,9 @@
                                         </button>
                                     </subviews>
                                     <constraints>
-                                        <constraint firstItem="uRX-RK-YId" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" id="1W7-CR-j7X"/>
                                         <constraint firstItem="yod-Xw-sDo" firstAttribute="top" secondItem="JMB-Uh-Dd0" secondAttribute="bottom" constant="14" id="1zt-NS-EZl"/>
                                         <constraint firstItem="RRE-kK-9Qc" firstAttribute="centerY" secondItem="roi-yx-hdi" secondAttribute="centerY" id="2Ps-kc-jJF"/>
                                         <constraint firstItem="Oqr-L3-O1z" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" constant="13" id="3UR-N7-UuJ"/>
-                                        <constraint firstAttribute="trailing" secondItem="uRX-RK-YId" secondAttribute="trailing" id="7Ih-Az-7lA"/>
                                         <constraint firstItem="RRE-kK-9Qc" firstAttribute="height" secondItem="roi-yx-hdi" secondAttribute="height" id="8TF-lp-wwG"/>
                                         <constraint firstAttribute="trailing" secondItem="0xd-lF-nR7" secondAttribute="trailing" id="8Zu-nZ-Dcb"/>
                                         <constraint firstItem="TfA-E0-i30" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" id="9Ez-W9-rka"/>
@@ -361,6 +353,7 @@
                                         <constraint firstItem="mDo-Vl-Foh" firstAttribute="top" secondItem="Oqr-L3-O1z" secondAttribute="top" constant="8" id="Qa8-bJ-K3N"/>
                                         <constraint firstItem="84x-OZ-c7a" firstAttribute="top" secondItem="ZXV-eD-0BO" secondAttribute="bottom" constant="18" id="RfJ-Og-v4o"/>
                                         <constraint firstItem="mDo-Vl-Foh" firstAttribute="centerX" secondItem="Oqr-L3-O1z" secondAttribute="centerX" id="SJS-B0-hKa"/>
+                                        <constraint firstAttribute="bottom" secondItem="roi-yx-hdi" secondAttribute="bottom" constant="17" id="Tdi-2u-kEe"/>
                                         <constraint firstAttribute="trailing" secondItem="To6-MU-QqW" secondAttribute="trailing" constant="10" id="Tem-wg-ASi"/>
                                         <constraint firstItem="gIm-IB-qpB" firstAttribute="leading" secondItem="d19-qw-iuS" secondAttribute="leading" constant="15" id="UoR-Jv-LAk"/>
                                         <constraint firstItem="TfA-E0-i30" firstAttribute="leading" secondItem="d19-qw-iuS" secondAttribute="leading" id="VfA-sf-eYH"/>
@@ -383,10 +376,8 @@
                                         <constraint firstItem="Oqr-L3-O1z" firstAttribute="leading" secondItem="gIm-IB-qpB" secondAttribute="trailing" constant="10" id="nYG-T0-goL"/>
                                         <constraint firstItem="Id8-Ui-uW0" firstAttribute="top" secondItem="d19-qw-iuS" secondAttribute="top" constant="10.5" id="o15-Kh-mGz"/>
                                         <constraint firstItem="JMB-Uh-Dd0" firstAttribute="top" secondItem="d19-qw-iuS" secondAttribute="top" constant="77" id="oOV-Re-kxq"/>
-                                        <constraint firstItem="uRX-RK-YId" firstAttribute="leading" secondItem="d19-qw-iuS" secondAttribute="leading" id="oej-76-Pm2"/>
                                         <constraint firstItem="Id8-Ui-uW0" firstAttribute="leading" secondItem="d19-qw-iuS" secondAttribute="leading" constant="11" id="pMf-ep-k8D"/>
                                         <constraint firstItem="jMU-nq-hCh" firstAttribute="leading" secondItem="84x-OZ-c7a" secondAttribute="trailing" constant="20" id="rOs-sa-9Vz"/>
-                                        <constraint firstItem="8SJ-sU-Lu6" firstAttribute="top" secondItem="TfA-E0-i30" secondAttribute="bottom" constant="21" id="smw-7z-Xqg"/>
                                         <constraint firstItem="28o-8T-dgi" firstAttribute="leading" secondItem="jMU-nq-hCh" secondAttribute="trailing" constant="20" id="yr2-JD-Mko"/>
                                         <constraint firstItem="yod-Xw-sDo" firstAttribute="centerX" secondItem="To6-MU-QqW" secondAttribute="centerX" id="zca-nS-jeF"/>
                                     </constraints>
@@ -403,6 +394,7 @@
                                     <outlet property="resourceTypeCollectionView" destination="gE7-o8-sM0" id="MXd-P9-h3u"/>
                                     <outlet property="resourceWatchTimeLabel" destination="roi-yx-hdi" id="ele-5M-AmG"/>
                                     <outlet property="timeLabel" destination="mDo-Vl-Foh" id="QV7-k7-K4D"/>
+                                    <outlet property="videoProgressView" destination="0xd-lF-nR7" id="uKb-fB-CB5"/>
                                 </connections>
                             </tableViewCell>
                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="kECVideoTableIntroductReuseIdentifier" rowHeight="150" id="lgz-vP-5gO" customClass="ECVideoIntroductTableViewCell">
@@ -480,20 +472,20 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="guessFilm" translatesAutoresizingMaskIntoConstraints="NO" id="TtP-lp-tTs">
-                                            <rect key="frame" x="24" y="13" width="93" height="93"/>
+                                            <rect key="frame" x="24" y="13.5" width="93" height="93"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" constant="93" id="NpR-j6-008"/>
-                                                <constraint firstAttribute="height" constant="93" id="OAr-MB-ckB"/>
+                                                <constraint firstAttribute="height" constant="93" id="vNN-Yu-64I"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="1000" verticalCompressionResistancePriority="1000" text="Star War The Third Gathers: Backstroke of the West HD" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dy-Df-I7U">
-                                            <rect key="frame" x="132" y="17" width="218" height="28"/>
+                                            <rect key="frame" x="132" y="17.5" width="218" height="28"/>
                                             <fontDescription key="fontDescription" name="HelveticaNeue-Medium" family="Helvetica Neue" pointSize="16"/>
                                             <nil key="textColor"/>
                                             <nil key="highlightedColor"/>
                                         </label>
                                         <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="bwn-2E-79Z">
-                                            <rect key="frame" x="131" y="53" width="217" height="21"/>
+                                            <rect key="frame" x="131" y="53.5" width="217" height="21"/>
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="21" id="K6H-gR-TVf"/>
@@ -532,13 +524,13 @@
                                             </cells>
                                         </collectionView>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="watch" translatesAutoresizingMaskIntoConstraints="NO" id="56G-K1-OTy">
-                                            <rect key="frame" x="131" y="88" width="18" height="18"/>
+                                            <rect key="frame" x="131" y="88.5" width="18" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="56G-K1-OTy" secondAttribute="height" multiplier="1:1" id="fzf-Qc-DjK"/>
                                             </constraints>
                                         </imageView>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="1606" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="UPN-H4-w3G">
-                                            <rect key="frame" x="155" y="88" width="33.5" height="18"/>
+                                            <rect key="frame" x="155" y="88.5" width="33.5" height="18"/>
                                             <constraints>
                                                 <constraint firstAttribute="height" constant="18" id="rqc-YT-vXO"/>
                                             </constraints>
@@ -580,7 +572,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="9ad-58-UyQ" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="928.79999999999995" y="120.98950524737631"/>
+            <point key="canvasLocation" x="928.78560719640188" y="120.8"/>
         </scene>
         <!--Full Screen Player-->
         <scene sceneID="nRn-UK-Scj">
@@ -595,7 +587,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vBq-MM-nNk">
-                                <rect key="frame" x="0.0" y="0.0" width="667" height="331"/>
+                                <rect key="frame" x="0.0" y="20" width="667" height="311"/>
                                 <color key="backgroundColor" cocoaTouchSystemColor="darkTextColor"/>
                             </view>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eth-QX-1b4">
@@ -652,7 +644,7 @@
                         <constraints>
                             <constraint firstItem="ar3-05-5zX" firstAttribute="top" secondItem="bCm-zw-zTv" secondAttribute="bottom" constant="10" id="2eK-Zd-Rgx"/>
                             <constraint firstItem="bn0-AF-jaM" firstAttribute="centerY" secondItem="ar3-05-5zX" secondAttribute="centerY" id="8l2-xf-ap8"/>
-                            <constraint firstItem="vBq-MM-nNk" firstAttribute="top" secondItem="W3U-pg-UEz" secondAttribute="bottom" constant="-20" id="9Ha-LL-n9E"/>
+                            <constraint firstItem="vBq-MM-nNk" firstAttribute="top" secondItem="W3U-pg-UEz" secondAttribute="bottom" id="9Ha-LL-n9E"/>
                             <constraint firstItem="akO-Bj-1SU" firstAttribute="centerX" secondItem="6LI-wt-P0J" secondAttribute="centerX" id="Ii8-7N-Wfp"/>
                             <constraint firstItem="bCm-zw-zTv" firstAttribute="leading" secondItem="6LI-wt-P0J" secondAttribute="leading" id="OHz-u2-icD"/>
                             <constraint firstItem="NWe-Ij-g34" firstAttribute="top" secondItem="ar3-05-5zX" secondAttribute="bottom" constant="20" id="OLX-I7-WHN"/>
